fix all products overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,17 @@ body {
     height: auto;
 }
 
+h2,
+h3,
+p,
+.text-center {
+    text-align: center;
+}
+
+h2 {
+    margin: 2rem 0rem;
+}
+
 button {
     font-family: Poppins;
 }
@@ -31,6 +42,7 @@ button {
 
 .product-section {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .single-product {
